[tool.poetry]
name = "interview-screener"
version = "1.0.0"
description = "Multi-Agent AI Interview Screener using LangGraph"
authors = ["Aman Singh"]
readme = "README.md"

[tool.poetry.dependencies]

fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
anthropic = "^0.39.0"
langgraph = "^0.2.45"
langchain = "^0.3.7"
langchain-anthropic = "^0.3.0"
redis = "^5.0.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]